# oinap-qal-frontend

./: .gitignore  README.md  package-lock.json
Project/backend/: README.md
Project/backend/diplom/: pyproject.toml
Project/backend/games_platform/: db.sqlite3  pyproject.toml
Project/backend/games_platform/core/: models.py  urls.py  wsgi.py
Project/backend/games_platform/core/migrations/: 0001_initial.py
Project/backend/games_platform/core/settings/: base.py  local.py
Project/backend/games_platform/core/utils/: swagger.py
Project/backend/games_platform/games/: admin.py  choices.py  filters.py  models.py  serializers.py  urls.py  views.py
Project/backend/games_platform/games/migrations/: 0001_initial.py  0002_alter_game_views.py
Project/backend/games_platform/users/: admin.py  authentication.py  choices.py  models.py  serializers.py  urls.py  utils.py  views.py
Project/backend/games_platform/users/migrations/: 0001_initial.py
Project/frontend/: .eslintignore  .eslintrc.js  README.md  db.json  package-lock.json  package.json  quasar.conf.js  tsconfig.json
Project/frontend/.storybook/: main.js
Project/frontend/games-gh-pages/games-gh-pages/: style.css
Project/frontend/src/: App.vue  index.template.html
Project/frontend/src/boot/: axios.ts  pinia.ts
Project/frontend/src/components/: AppDrawer.vue  AppHeader.vue  Banner.vue  DemoSDK.vue  EssentialLink.vue  GameCard.vue  README.md
Reports/: READ.md  README.md  WEEK10.md  WEEK11.md  WEEK12.md  WEEK5.md  WEEK6.md  WEEK7.md  WEEK8.md  WEEK9.md
отчеты/: README.md
(+149 files in other folders)
