[tool.poetry]
name = "games_platform"
version = "0.1.0"
description = ""
authors = ["Bekmaganbetov Zhanbolat <180107180@stu.sdu.edu.kz>"]

[tool.poetry.dependencies]
python = "^3.9"
djangorestframework = "^3.13.1"
Django = "^4.0.3"
django-rest-swagger = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
